// Copyright 2017 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package dashboard;

// The ChromeOps statuses service definition.
service ChopsServiceStatus {
  rpc UpdateOpenIncidents (UpdateOpenIncidentsRequest) returns (UpdateOpenIncidentsResponse) {}
}

enum Severity {
    RED = 0;
    YELLOW = 1;
}

message UpdateOpenIncidentsRequest {
  ChopsService chops_service = 1;
}

message UpdateOpenIncidentsResponse {
  repeated ChopsIncident open_incidents = 1;
}

message ChopsIncident {
  string id = 1;
  bool open = 2;
  int64 start_time = 3;
  int64 end_time = 4;
  Severity severity = 5;
}

message ChopsService {
  string name = 1;
  repeated ChopsIncident incidents = 2;
  string sla = 3;
}
